RESOLVED FIXED82248
Don't manually set an identifier for main resource loads in FrameLoader
https://bugs.webkit.org/show_bug.cgi?id=82248
Summary Don't manually set an identifier for main resource loads in FrameLoader
Nate Chapin
Reported 2012-03-26 14:49:26 PDT
Currently, we create an identifier and assign it to the ResourceRequest for a main resource load in FrameLoader just before we create the MainResourceLoader. We then pass the identifier into the MainResourceLoader immediately after it is created. Given that the MainResourceLoader would have created and set an identifier shortly thereafter (when willSendRequest is called for the initial request), I can't figure out why we need this extra code in FrameLoader.
Attachments
patch (4.08 KB, patch)
2012-03-26 14:55 PDT, Nate Chapin
no flags
Hopefully EWS-able now (4.05 KB, patch)
2012-03-26 15:12 PDT, Nate Chapin
abarth: review+
webkit.review.bot: commit-queue-
Nate Chapin
Comment 1 2012-03-26 14:55:35 PDT
Nate Chapin
Comment 2 2012-03-26 15:12:03 PDT
Created attachment 133904 [details] Hopefully EWS-able now
Adam Barth
Comment 3 2012-03-27 13:21:45 PDT
Comment on attachment 133904 [details] Hopefully EWS-able now Thanks for digging through the history to figure out when this code was added.
WebKit Review Bot
Comment 4 2012-03-27 13:23:49 PDT
Comment on attachment 133904 [details] Hopefully EWS-able now Rejecting attachment 133904 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: ueue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 70, in run_and_handle_errors self._run(tool, options, state) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 50, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output: http://queues.webkit.org/results/12142691
Nate Chapin
Comment 5 2012-03-27 13:31:22 PDT
(In reply to comment #4) > (From update of attachment 133904 [details]) > Rejecting attachment 133904 [details] from commit-queue. > > Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 > > Last 500 characters of output: > ueue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 70, in run_and_handle_errors > self._run(tool, options, state) > File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run > step(tool, options).run(state) > File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 50, in run > if changelog_entry.has_valid_reviewer(): > AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' > > Full output: http://queues.webkit.org/results/12142691 Landed manually: http://trac.webkit.org/changeset/112308
Note You need to log in before you can comment on or make changes to this bug.