2012-03-27  Nate Chapin  <japhet@chromium.org>

Don't manually set an identifier for main resource
        loads in FrameLoader. ResourceLoader::willSendRequest()
        will set an identifier for the request if one isn't found,
        so this code appears to be unnecessary duplication.
        https://bugs.webkit.org/show_bug.cgi?id=82248

        Reviewed by Adam Barth.

        No new tests, no functionality change intended.

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::startLoadingMainResource): Mark navigation start
            here, since it's conceptually part of starting the main resource load.
        * loader/DocumentLoader.h:
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::continueLoadAfterWillSubmitForm): Remove duplicate identifier
            logic, and move navigation timing call to startLoadingMainResource, since
            it fits better logically there.
        * loader/ResourceLoader.h: No callers of setIdentifier() remain, so delete it.



Canonical link: https://commits.webkit.org/99734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112308 268f45cc-cd09-0410-ab3c-d52691b4dbfc